# LearnOGL

./: .gitignore  LICENSE.md  README.md
01_Getting_started/: README.md
01_Getting_started/01_Creating_a_window/: CMakeLists.txt  glad.c
01_Getting_started/02_Hello_Window/: CMakeLists.txt
01_Getting_started/03_Hello_Triangle/: CMakeLists.txt  hello_triangle.cpp
01_Getting_started/04_Shaders/: CMakeLists.txt  shaders.cpp
01_Getting_started/05_Textures/: CMakeLists.txt  fragment.shader  textures.cpp
01_Getting_started/06_Transformations/: CMakeLists.txt  Shader.cpp  transformations.cpp  vertex.shader
01_Getting_started/07_Coordinate_Systems/: CMakeLists.txt  coordinate_systems.cpp  vertex.shader
01_Getting_started/08_Camera/: CMakeLists.txt  Shader.h  camera.cpp  vertex.shader
02_Lighting/00_Colors/: CMakeLists.txt  colors.cpp
02_Lighting/01_Basic_Lighting/: CMakeLists.txt  basic_lighting.cpp
include/glad/: glad.h
lib/pkgconfig/: glfw3.pc
